--- a/configure.ac
+++ b/configure.ac
@@ -148,6 +148,7 @@ AS_IF([test "x$enable_hardening" != "xno"],
        ;;
      *)
        AX_CHECK_COMPILE_FLAG([-fPIE], [CPPFLAGS="$CPPFLAGS -fPIE"])
+       AX_CHECK_COMPILE_FLAG([-fPIC], [CPPFLAGS="$CPPFLAGS -fPIC"])
        AX_CHECK_LINK_FLAG([-pie], [LDFLAGS="$LDFLAGS -pie"])
        ;;
    esac
