tinc_start() - skeleton of the API call. The function starts the main tinc thread where the tinc logic will be. We pass the confbase because an application may participate in multiple VPNs at the same time (to be discussed further)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -167,6 +167,8 @@ libmeshlink_la_SOURCES = \
 
 libmeshlink_la_CFLAGS = -fPIC
 
+libmeshlink_la_LIBADD = -lpthread
+
 ## Conditionally compile device drivers
 	
 if LINUX
