Remove support for the legacy protocol.
We only allow SPTPS connections.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -58,8 +58,6 @@ libmeshlink_la_SOURCES = \
 	protocol_key.c \
 	protocol_misc.c \
 	route.c route.h \
-	rsa.h \
-	rsagen.h \
 	splay_tree.c splay_tree.h \
 	sptps.c sptps.h \
 	system.h \
@@ -78,9 +76,7 @@ libmeshlink_la_SOURCES += \
 	openssl/ecdh.c \
 	openssl/ecdsa.c \
 	openssl/ecdsagen.c \
-	openssl/prf.c \
-	openssl/rsa.c \
-	openssl/rsagen.c
+	openssl/prf.c
 sptps_test_SOURCES += \
 	openssl/cipher.c \
 	openssl/crypto.c \
