Use the ChaCha-Poly1305 cipher for the SPTPS protocol.
The main reason to switch from AES-256-GCM to ChaCha-Poly1305 is to remove a
dependency on OpenSSL, whose behaviour of the AES-256-GCM decryption function
changes between versions. The source code for ChaCha-Pol1305 is small and in
the public domain, and can therefore be easily included in tinc itself.
Moreover, it is very fast even without using any optimized assembler, easily
outperforming AES-256-GCM on platforms that don't have special AES instructions
in hardware.

Conflicts:
	src/Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,12 +23,18 @@ ed25519_SOURCES = \
 	ed25519/sign.c \
 	ed25519/verify.c
 
+chacha_poly1305_SOURCES = \
+	chacha-poly1305/chacha.c chacha-poly1305/chacha.h \
+	chacha-poly1305/chacha-poly1305.c chacha-poly1305/chacha-poly1305.h \
+	chacha-poly1305/poly1305.c chacha-poly1305/poly1305.h
+
 sptps_test_SOURCES = \
 	logger.c logger.h \
 	sptps.c sptps.h \
 	sptps_test.c \
 	utils.c utils.h \
-	$(ed25519_SOURCES)
+	$(ed25519_SOURCES) \
+	$(chacha_poly1305_SOURCES)
 
 sptps_keypair_SOURCES = \
 	sptps_keypair.c \
@@ -40,7 +46,8 @@ sptps_speed_SOURCES = \
 	sptps.c sptps.h \
 	sptps_speed.c \
 	utils.c utils.h \
-	$(ed25519_SOURCES)
+	$(ed25519_SOURCES) \
+	$(chacha_poly1305_SOURCES)
 
 lib_LTLIBRARIES = libmeshlink.la
 
@@ -86,14 +93,14 @@ libmeshlink_la_SOURCES = \
 	tincd.c \
 	utils.c utils.h \
 	xalloc.h \
-	$(ed25519_SOURCES)
+	$(ed25519_SOURCES) \
+	$(chacha_poly1305_SOURCES)
 
 libmeshlink_la_CFLAGS = -fPIC
 
 libmeshlink_la_LIBADD = -lpthread
 
 libmeshlink_la_SOURCES += \
-	openssl/cipher.c \
 	openssl/crypto.c \
 	openssl/digest.c openssl/digest.h \
 	openssl/ecdh.c \
@@ -101,7 +108,6 @@ libmeshlink_la_SOURCES += \
 	openssl/ecdsagen.c \
 	openssl/prf.c
 sptps_test_SOURCES += \
-	openssl/cipher.c \
 	openssl/crypto.c \
 	openssl/digest.c openssl/digest.h \
 	ed25519/ecdh.c \
@@ -111,7 +117,6 @@ sptps_keypair_SOURCES += \
 	openssl/crypto.c \
 	ed25519/ecdsagen.c
 sptps_speed_SOURCES += \
-	openssl/cipher.c \
 	openssl/crypto.c \
 	openssl/digest.c openssl/digest.h \
 	ed25519/ecdh.c \
