--- a/configure.ac
+++ b/configure.ac
@@ -124,6 +124,6 @@ dnl These are defined in files in m4/
 
 MeshLink_ZLIB
 
-AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile m4/Makefile test/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile m4/Makefile test/Makefile examples/Makefile])
 
 AC_OUTPUT
