Add an example chat program.
This one doesn't compile yet, but it illustrates how we want to use MeshLink in
a more realistic application.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,9 @@
-bin_PROGRAMS = meshlinkapp
+bin_PROGRAMS = meshlinkapp chat
 
 AM_CPPFLAGS = -I../src
 
 meshlinkapp_SOURCES = meshlinkapp.c
+meshlinkapp_LDADD = ../src/libmeshlink.la
+
+meshlinkapp_SOURCES = chat.c
 meshlinkapp_LDADD = ../src/libmeshlink.la
