Start moving the implementation of the public part of the API to meshlink.c.
For now it just contains stubs for all the public functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -57,7 +57,7 @@ sptps_speed_SOURCES = \
 lib_LTLIBRARIES = libmeshlink.la
 
 libmeshlink_la_SOURCES = \
-	libmeshlink.c libmeshlink.h \
+	meshlink.c meshlink.h \
 	buffer.c buffer.h \
 	cipher.h \
 	conf.c conf.h \
