Only export symbols that start with meshlink_.
We don't want to pollute the global namespace with all our internal functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,6 +56,8 @@ sptps_speed_SOURCES = \
 
 lib_LTLIBRARIES = libmeshlink.la
 
+libmeshlink_la_LDFLAGS = -export-symbols-regex '^meshlink_'
+
 libmeshlink_la_SOURCES = \
 	meshlink.c meshlink.h \
 	buffer.c buffer.h \
