Implement meshlink_sign() and _verify().

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,13 +1,14 @@
 TESTS = \
 	basic.test \
 	import-export.test \
-	invite-join.test
+	invite-join.test \
+	sign-verify.test
 
 dist_check_SCRIPTS = $(TESTS)
 
 AM_CPPFLAGS = -I../src
 
-check_PROGRAMS = basic import-export invite-join
+check_PROGRAMS = basic import-export invite-join sign-verify
 
 basic_SOURCES = basic.c
 basic_LDADD = ../src/libmeshlink.la
@@ -17,3 +18,6 @@ import_export_LDADD = ../src/libmeshlink.la
 
 invite_join_SOURCES = invite-join.c
 invite_join_LDADD = ../src/libmeshlink.la
+
+sign_verify_SOURCES = sign-verify.c
+sign_verify_LDADD = ../src/libmeshlink.la
