Add a test for the channel API.
It doesn't compile yet, so it's not included in the Makefile.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -25,3 +25,6 @@ invite_join_LDADD = ../src/libmeshlink.la
 
 sign_verify_SOURCES = sign-verify.c
 sign_verify_LDADD = ../src/libmeshlink.la
+
+channels_SOURCES = channels.c
+channels_LDADD = ../src/libmeshlink.la
