Start of the manynodes example.
This example program starts many instances of MeshLink in a single
program, and can let them connect to each other. This is mainly usable
for testing scalability.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = meshlinkapp chat chatpp
+bin_PROGRAMS = meshlinkapp chat chatpp manynodes
 
 AM_CPPFLAGS = -I../src
 
@@ -10,3 +10,6 @@ chat_LDADD = ../src/libmeshlink.la
 
 chatpp_SOURCES = chatpp.cc
 chatpp_LDADD = ../src/libmeshlink.la
+
+manynodes_SOURCES = manynodes.cc
+manynodes_LDADD = ../src/libmeshlink.la
