submodule catta added
Conflicts:
	.gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,10 @@
 	path = avahi
 	url = git@chicago.everbase.net:meshlink/avahi-noptr.git
 	branch = noptr
+[submodule "catta"]
+	path = catta
+	url = https://github.com/everbase/catta.git
+	branch = develop
 [submodule "src/utcp"]
 	path = src/utcp
 	url = git://meshlink.io/utcp
