rename of avahi to catta

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,9 +107,9 @@ libmeshlink_la_SOURCES = \
 	$(chacha_poly1305_SOURCES) \
 	$(utcp_SOURCES)
 
-libmeshlink_la_CFLAGS = -fPIC -I../catta/
+libmeshlink_la_CFLAGS = -fPIC -I../catta/include/
 
-libmeshlink_la_LIBADD = -lpthread -luuid ../catta/avahi-core/.libs/libavahi-core.a ../catta/avahi-common/.libs/libavahi-common.a
+libmeshlink_la_LIBADD = -lpthread -luuid ../catta/src/.libs/libcatta.a
 
 libmeshlink_la_SOURCES += \
 	ed25519/ecdh.c \
