Update .gitignore files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,24 @@ Makefile.in
 *.a
 *.lo
 *.la
+*.orig
+*~
+.*
+!.gitignore
+core
+core.*
 /config.*
-/src/tincd
 /autom4te.cache
 /aclocal.m4
+/aminclude.am
 /compile
 /configure
 /depcomp
 /install-sh
 /missing
-INSTALL
-.deps
-stamp-h1
-/src/device.c
+/libtool
+/ltmain.sh
+/py-compile
+/test-driver
+/stamp-h1
+/INSTALL
