--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -111,6 +111,10 @@ libmeshlink_la_SOURCES = \
 
 libmeshlink_la_CFLAGS = -fPIC -I../catta/include/
 
+if MINGW
+libmeshlink_la_CFLAGS += -I../catta/src/compat/windows/include/
+endif
+
 libmeshlink_la_LIBADD = -lpthread ../catta/src/.libs/libcatta.a
 
 libmeshlink_la_SOURCES += \
