--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -115,7 +115,7 @@ if MINGW
 libmeshlink_la_CFLAGS += -I../catta/src/compat/windows/include/
 endif
 
-libmeshlink_la_LIBADD = -lpthread ../catta/src/.libs/libcatta.a
+libmeshlink_la_LIBADD = -lpthread ../catta/src/libcatta.la
 
 libmeshlink_la_SOURCES += \
 	ed25519/ecdh.c \
