--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,5 @@
 	branch = develop
 [submodule "src/utcp"]
 	path = src/utcp
-	url = git://meshlink.io/utcp
+	url = https://chicago.everbase.net/meshlink/utcp.git
+	branch = master
