fixed headers and makefiles for msvc build added include folder and moved and fixed headers used to link for include/meshlink install path updated dependent source files

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = gnu
 
-SUBDIRS =  m4 src doc test examples
+SUBDIRS =  m4 src include doc test examples
 
 ACLOCAL_AMFLAGS = -I m4 
 
