Add an --enable-install-tests option to configure.
This will enable the installation of the test binaries when running
make install. This feature is intended to make continuous integration
easier.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -25,6 +25,10 @@ check_PROGRAMS = \
 	sign-verify \
 	echo-fork
 
+if INSTALL_TESTS
+bin_PROGRAMS = $(check_PROGRAMS)
+endif
+
 basic_SOURCES = basic.c
 basic_LDADD = ../src/libmeshlink.la
 
