--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,18 +1,18 @@
 noinst_PROGRAMS = meshlinkapp chat chatpp manynodes channels
 
-AM_CPPFLAGS = -I../src -Wall
+AM_CPPFLAGS = -I${top_srcdir}/src -iquote. -Wall
 
 meshlinkapp_SOURCES = meshlinkapp.c
-meshlinkapp_LDADD = ../src/libmeshlink.la ../catta/src/libcatta.la
+meshlinkapp_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
 
 chat_SOURCES = chat.c
-chat_LDADD = ../src/libmeshlink.la ../catta/src/libcatta.la
+chat_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
 
 chatpp_SOURCES = chatpp.cc
-chatpp_LDADD = ../src/libmeshlink.la ../catta/src/libcatta.la
+chatpp_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
 
-manynodes_SOURCES = manynodes.cc
-manynodes_LDADD = ../src/libmeshlink.la ../catta/src/libcatta.la
+manynodes_SOURCES = manynodes.c
+manynodes_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
 
 channels_SOURCES = channels.c
-channels_LDADD = ../src/libmeshlink.la ../catta/src/libcatta.la
+channels_LDADD = ${top_builddir}/src/libmeshlink.la ${top_builddir}/catta/src/libcatta.la
