--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -11,7 +11,8 @@ TESTS = \
 
 dist_check_SCRIPTS = $(TESTS)
 
-AM_CPPFLAGS = -I${top_srcdir}/src -iquote. -Wall
+AM_CPPFLAGS = $(PTHREAD_CFLAGS) -I${top_srcdir}/src -iquote. -Wall
+AM_LDFLAGS = $(PTHREAD_LIBS)
 
 check_PROGRAMS = \
 	basic \
